<resources>
    <string name="app_name">LetsHelp</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_to_admin_panel">Welcome to Admin Panel</string>
    <string name="admin_login">Admin Login</string>
    <string name="admin_register">Admin Register</string>
    <string name="login">login</string>
    <string name="logo">logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
<<<<<<< HEAD

=======
>>>>>>> 484759b41456592be51ebd98ddcfe238e771d075
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_profile">Profile</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
<<<<<<< HEAD

    <string name="welcome_to_admin_login">Welcome to Admin Login</string>
    <string name="not_an_admin">Not an Admin?Click here</string>
    <string name="register">Register</string>
    <string name="already_an_admin_click_here">Already an admin?Click here</string>
    <string name="welcome_to_admin_register">Welcome to Admin Register</string>

=======
    =======
    <string name="welcome_to_admin_login">Welcome to Admin Login</string>
    <string name="title_activity_clothes_details">Details</string>
    <string name="title_activity_news_details">Details</string>
    <string name="title_activity_events_details">Details</string>
    <string name="order_id">Order Id : </string>
    <string name="customer_id">Customer Id : </string>
    <string name="transaction_amount">Transaction Amount : </string>
    <string name="channel_id">Channel Id : </string>
    <string name="industry_type_id">Industry Type Id : </string>
    <string name="website">Website : </string>
    <string name="theme">Theme : </string>
    <string name="cust_email_id">Email Id : </string>
    <string name="cust_mobile_no">Mobile Number : </string>
    <string name="merchant_id">Merchant Id : </string>
    <string name="checksum_generation_url">Checksum Generation URL : </string>
    <string name="checksum_verification_url">Checksum Verification URL : </string>
    <string name="start_transaction">Start Transaction</string>
    <string name="sample_order_id">ORDER</string>
    <string name="sample_customer_id">CUST23657</string>
    <string name="sample_transaction_amount">1</string>
    <string name="sample_channel_id">WAP</string>
    <string name="sample_industry_type_id">Retail</string>
    <string name="sample_website">samsetdev.blogspot.com</string>
    <string name="sample_theme">merchant</string>
    <string name="sample_cust_email_id">abc@gmail.com</string>
    <string name="sample_cust_mobile_no">123</string>
    <string name="sample_merchant_id_staging">WorldP64425807474247</string>
    <string name="sample_checksum_generation_url">https://pguat.paytm.com/merchant-chksum/ChecksumGenerator</string>
    <string name="sample_checksum_verification_url">https://pguat.paytm.com/merchant-chksum/ValidateChksum</string>
>>>>>>> 484759b41456592be51ebd98ddcfe238e771d075
</resources>
