<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:layout_marginTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ashu.help.letshelp.com.letshelp.Admin.AdminPanel">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:background="@drawable/border_edittext"
        android:text="@string/welcome_to_admin_panel"
        android:textSize="25sp"
        android:gravity="center"
        android:id="@+id/textView2" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/helplogo"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="86dp"
        android:layout_centerHorizontal="true"/>
    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30sp"

        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <Button
            android:id="@+id/admin_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin_login"
            android:padding="15dp"
            android:textColor="#ffffff"
            android:layout_gravity="center"
            android:background="@drawable/design_button"
            android:onClick="submit"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <Button
            android:id="@+id/admin_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin_register"
            android:textColor="#ffffff"
            android:padding="5dp"
            android:layout_gravity="center"
            android:background="@drawable/design_button"
            android:onClick="submit"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>
</RelativeLayout>
